--- a/css/main.css
+++ b/css/main.css
@@ -1285,14 +1285,14 @@ a.text-white {
     }
 
 }
-
+/*
 @media(min-width: 992px) {
 
     .schedule,
     .schedule+.container {
         max-width: 45% !important;
     }
-
+*/
 
 }
 @media(min-width: 992px) and (max-width:1003px){
@@ -1358,7 +1358,6 @@ a.text-white {
 
 @media (min-width:1300px) {
     #navigation-wrapper>.navigation {
-        width: 90%;
         margin-right: 0 !important;
     }
 
