--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,10 @@ footer>.container {
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
+.backdown {
+    margin-top: 64px;
+}
+
 .white-cont {
     background-color: white;
     border-radius: 15px;
@@ -127,7 +131,7 @@ footer>.container {
 
     /* Glass effect */
     background: none !important;
-    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .4);
+    box-shadow: inset 0 0 2000px rgba(0, 0, 0, .4);
     backdrop-filter: blur(10px) !important;
 
 
@@ -1413,7 +1417,7 @@ a.text-white {
 }
 @media (min-width:1670px) {
     .navigation, .dop-res, .schedule, .schedule+.container{
-        max-width: 80% !important;
+        max-width: 100% !important;
     }
 
     .wrapper{
